--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@imgs/*": ["public/images/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
